Fix for redrawing the rulers behind the toolbar.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,4 @@
 html, body {
-  margin: 0;
-  overflow: hidden;
   height: 100%;
 }
 
@@ -52,6 +50,7 @@ i {
 canvas {
   width: 100%;
   height: 100%;
+  display: block;
   z-index: -1;
   -webkit-user-select: none;
 }
@@ -102,6 +101,7 @@ canvas[resize] {
   white-space: nowrap;
   z-index: 2;
   width: 100vw;
+  display: block;
 }
 
 #grid_size_vertical,
